LF-4089 Fix flex and text truncation behaviour
Based on discussion at dev standup

--- a/packages/webapp/src/components/KPIDashboard/KPITile/styles.module.scss
+++ b/packages/webapp/src/components/KPIDashboard/KPITile/styles.module.scss
@@ -16,15 +16,17 @@
 @import '../../../assets/mixin';
 
 .tile {
-  display: flex;
   height: 40px;
-  min-width: 90px;
   width: 100%;
-  padding: 0px 8px;
-  justify-content: space-between;
+  min-width: 90px;
+
+  display: flex;
+
+  justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  gap: 4px;
+  gap: 8px;
+  padding: 0px 8px;
 
   border-radius: 4px;
   background: #2d5550;
@@ -32,31 +34,30 @@
 }
 
 .tileText {
+  width: calc(100% - 24px); // whole width minus icon
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: -3px;
+
+  font-family: 'Open Sans';
+  font-style: normal;
 }
 
 .tileLabel {
-  color: var(--Colors-Accent-Accent-yellow-50, #fff8e6);
-  font-family: 'Open Sans';
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.264px;
-
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: calc(90px - 36px);
+
+  color: var(--Colors-Accent-Accent-yellow-50, #fff8e6);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.264px;
 }
 .tileCountLabel {
   color: var(--Colors-Accent-Accent-yellow-400, #ffc633);
-  font-family: 'Open Sans';
   font-size: 14px;
-  font-style: normal;
   font-weight: 700;
   line-height: normal;
   letter-spacing: -0.308px;
