--- a/packages/webapp/src/components/KPIDashboard/styles.module.scss
+++ b/packages/webapp/src/components/KPIDashboard/styles.module.scss
@@ -133,4 +133,5 @@
 .contentItem {
   width: 100%;
   min-width: 78px;
+  max-width: 90px;
 }
